update name of client

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    future site of client_last_name
+    future site of teagan lewis
 </body>
 </html>
