--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    future site of teagan lewis
+    <div id="header&nav">
+        <header>
+            <img src="images/logo.png" alt="The Concealed Shield Logo">
+            <h1>The Concealed Shield</h1>
+        </header>
+        <nav> 
+            <a href="index.html">Home</a>
+            <a href="about.html">Gear Reviews</a>
+            <a href="contact.html">Safty/Training</a>   
+        </nav>
+    </div>
+    <div id="main">
+        <h3>Your Trusted Sourcce for Concealed Carry & Firearm Reasources</h3>
+        <p>
+            Expert reviews, safty tips and responsible gun ownership guidence.
+        </p>
+    </div>
+    <div id="gear reviews">
+        <h2>Gear Reviews</h2>
+        <a id="gear_link" href="about.html">
+            <img src="images/gear_intro.jpg" alt="Gear Reviews">
+        </a>
+    </div>
+    <div id="safty/training">
+        <h2>Safty/Training</h2>
+        <a id="safty_link" href="contact.html">
+            <img src="images/firearm_safety.jpg" alt="Safty/Training">
+        </a>
+    </div>
+    <div id="footer">
+        <footer>
+            <h2>Connect with Us</h2>
+            <div class="social">
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+            <p>&copy; 2025 The Concealed Shield</p>
+        </footer>
+    </div>
+
+
 </body>
+
 </html>
