update css file

--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="header&nav">
         <header>
             <img src="images/logo.png" alt="The Concealed Shield Logo">
             <h1>The Concealed Shield</h1>
-        </header>
-        <nav> 
+            <nav> 
             <a href="index.html">Home</a>
             <a href="about.html">Gear Reviews</a>
             <a href="contact.html">Safty/Training</a>   
         </nav>
-    </div>
-    <div id="main">
+        </header>
+    <main>
         <h3>Your Trusted Sourcce for Concealed Carry & Firearm Reasources</h3>
         <p>
             Expert reviews, safty tips and responsible gun ownership guidence.
         </p>
-    </div>
+        <img src="images/hero.jpg" alt="Hero Image">
     <div id="gear reviews">
         <h2>Gear Reviews</h2>
         <a id="gear_link" href="about.html">
@@ -38,7 +36,7 @@
             <img src="images/firearm_safety.jpg" alt="Safty/Training">
         </a>
     </div>
-    <div id="footer">
+    </main>
         <footer>
             <h2>Connect with Us</h2>
             <div class="social">
@@ -47,7 +45,6 @@
                 <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
             <p>&copy; 2025 The Concealed Shield</p>
         </footer>
-    </div>
 
 
 </body>
