--- a/index.html
+++ b/index.html
@@ -9,44 +9,45 @@
 </head>
 
 <body>
-        <header>
-            <img src="images/logo.png" alt="The Concealed Shield Logo">
-            <h1>The Concealed Shield</h1>
-            <nav> 
+    <header>
+        <img src="images/logo.png" alt="The Concealed Shield Logo" width="50px" height="auto">
+        <h1>The Concealed Shield</h1>
+        <nav> 
             <a href="index.html">Home</a>
             <a href="about.html">Gear Reviews</a>
             <a href="contact.html">Safty/Training</a>   
         </nav>
-        </header>
+    </header>
     <main>
-        <h3>Your Trusted Sourcce for Concealed Carry & Firearm Reasources</h3>
-        <p>
-            Expert reviews, safty tips and responsible gun ownership guidence.
-        </p>
-        <img src="images/hero.jpg" alt="Hero Image">
-    <div id="gear reviews">
-        <h2>Gear Reviews</h2>
-        <a id="gear_link" href="about.html">
-            <img src="images/gear_intro.jpg" alt="Gear Reviews">
-        </a>
-    </div>
-    <div id="safty/training">
-        <h2>Safty/Training</h2>
-        <a id="safty_link" href="contact.html">
-            <img src="images/firearm_safety.jpg" alt="Safty/Training">
-        </a>
-    </div>
+        <div id="hero">
+            <h3>Your Trusted Sourcce for Concealed Carry & Firearm Reasources</h3>
+            <p>
+                Expert reviews, safty tips and responsible gun ownership guidence.
+            </p>
+            <img src="images/hero.jpg" alt="Hero Image">
+        </div>
+        <div id="gear_reviews">
+            <h2>Gear Reviews</h2>
+            <a id="gear_link" href="about.html">
+                <img src="images/gear_intro.jpg" alt="Gear Reviews">
+            </a>
+        </div>
+        <div id="safty_training">
+            <h2>Safty/Training</h2>
+            <a id="safty_link" href="contact.html">
+                <img src="images/firearm_safety.jpg" alt="Safty/Training">
+            </a>
+        </div>
     </main>
-        <footer>
-            <h2>Connect with Us</h2>
-            <div class="social">
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
-            <p>&copy; 2025 The Concealed Shield</p>
-        </footer>
-
-
+    <footer>
+        <h2>Connect with Us</h2>
+        <div class="social">
+            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+        </div>
+        <p>&copy; 2025 The Concealed Shield</p>
+    </footer>
 </body>
 
 </html>
