mostly finished home page

--- a/index.html
+++ b/index.html
@@ -4,39 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="styles/style1.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <img src="images/logo.png" alt="The Concealed Shield Logo" width="50px" height="auto">
+        <img src="images/logo.png" alt="The Concealed Shield Logo" width="90px" height="auto">
         <h1>The Concealed Shield</h1>
-        <nav> 
-            <a href="index.html">Home</a>
-            <a href="about.html">Gear Reviews</a>
-            <a href="contact.html">Safty/Training</a>   
-        </nav>
+        
     </header>
+    <nav> 
+        <a href="index.html">Home</a>
+        <a href="about.html">Gear Reviews</a>
+        <a href="contact.html">Safety/Training</a>   
+    </nav>
     <main>
         <div id="hero">
-            <h3>Your Trusted Sourcce for Concealed Carry & Firearm Reasources</h3>
+            <h3>Your Trusted Source for Concealed Carry & Firearm Resources</h3>
             <p>
-                Expert reviews, safty tips and responsible gun ownership guidence.
+                Expert reviews, safety tips and responsible gun ownership guidence.
             </p>
             <img src="images/hero.jpg" alt="Hero Image">
         </div>
-        <div id="gear_reviews">
-            <h2>Gear Reviews</h2>
-            <a id="gear_link" href="about.html">
-                <img src="images/gear_intro.jpg" alt="Gear Reviews">
-            </a>
-        </div>
-        <div id="safty_training">
-            <h2>Safty/Training</h2>
-            <a id="safty_link" href="contact.html">
-                <img src="images/firearm_safety.jpg" alt="Safty/Training">
-            </a>
+        <div id="grid_items">
+            <div id="gear_reviews">
+                <a id="gear_link" href="about.html">
+                    <h2>Gear Reviews</h2>
+                    <img src="images/gear_intro.jpg" alt="Gear Reviews">
+                </a>
+            </div>
+            <div id="safty_training">
+                <a id="safty_link" href="contact.html">
+                    <h2>Safety/Training</h2>
+                    <img src="images/firearm_safety.jpg" alt="Safty/Training">
+                </a>
+            </div>
         </div>
     </main>
     <footer>
