--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <footer>
         <h2>Connect with Us</h2>
         <div class="social">
-            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook2 - Copy.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com/"><img src="images/twitter2.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram2.png" alt="Instagram"></a>
         </div>
         <p>&copy; 2025 The Concealed Shield</p>
     </footer>
