--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav> 
         <a href="index.html">Home</a>
         <a href="about.html">Gear Reviews</a>
-        <a href="contact.html">Safety/Training</a>   
+        <a href="safety.html">Safety/Training</a>   
     </nav>
     <main>
         <div id="hero">
