--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         
     </header>
     <nav> 
-        <a href="index.html">Home</a>
-        <a href="about.html">Gear Reviews</a>
-        <a href="safety.html">Safety/Training</a>   
+        <a href="https://aidanricks.github.io/wdd130-Lewis/index.html">Home</a>
+        <a href="#">Gear Reviews</a>
+        <a href="https://aidanricks.github.io/wdd130-Lewis/safety.html">Safety/Training</a>   
     </nav>
     <main>
         <div id="hero">
