--- a/safety.html
+++ b/safety.html
@@ -14,9 +14,9 @@
         <h1>The Concealed Shield</h1>
     </header>
     <nav> 
-        <a href="index.html">Home</a>
-        <a href="about.html">Gear Reviews</a>
-        <a href="safety.html">Safety/Training</a>   
+        <a href="https://aidanricks.github.io/wdd130-Lewis/index.html">Home</a>
+        <a href="#">Gear Reviews</a>
+        <a href="https://aidanricks.github.io/wdd130-Lewis/safety.html">Safety/Training</a>   
     </nav>
     <main>
         <div class="main_grid">
