--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>The Concealed Shield</h1>
         
     </header>
-    <nav> 
+    <nav>  
         <a href="index.html">Home</a>
         <a href="gear_reviews.html">Gear Reviews</a>
         <a href="safety.html">Safety/Training</a>   
@@ -29,13 +29,13 @@
         </div>
         <div id="grid_items">
             <div id="gear_reviews">
-                <a id="gear_link" href="about.html">
+                <a id="gear_link" href="gear_reviews.html">
                     <h2>Gear Reviews</h2>
                     <img src="images/gear_intro.jpg" alt="Gear Reviews">
                 </a>
             </div>
             <div id="safty_training">
-                <a id="safty_link" href="contact.html">
+                <a id="safty_link" href="safety.html">
                     <h2>Safety/Training</h2>
                     <img src="images/firearm_safety.jpg" alt="Safty/Training">
                 </a>
