--- a/safety.html
+++ b/safety.html
@@ -13,7 +13,7 @@
         <img src="images/logo.png" alt="The Concealed Shield Logo" width="90px" height="auto">
         <h1>The Concealed Shield</h1>
     </header>
-    <nav> 
+    <nav>  
         <a href="index.html">Home</a>
         <a href="gear_reviews.html">Gear Reviews</a>
         <a href="safety.html">Safety/Training</a>   
@@ -35,6 +35,7 @@
         </div>
         <div class="second_grid">
             <h1 class="title_2">Concealed Carry - Best Practices</h1>
+            <p>Carrying a concealed firearm is a privilege, and it can be very comforting to know that you have the capability of defending yourself and your family in a worst case scenario. However, there are several drawbacks and complications that can come from concealing a firearm. But with the right precautions both the risks and inconveniences associated can be mitigated. Choosing the right holster is one of the most important things you can do to ensure a safe carrying experience. You should choose a holster that fits snugly, securely stores your firearm, and completely covers the trigger guard to prevent accidental discharge. Next, a firearm is basically useless if you don't know how to use it. If you haven't received proper training, you should seriously consider taking a hands-on firearms/concealed carry course before you start carrying. Along those same lines, it's vital that you familiarize yourself with the legal obligations involved in concealing a firearm, as well as the situations in which you are authorized to use deadly force to defend yourself. Failure to comply with the law, even in self-defense, may result in permanent legal and civil consequences.</p>
             <img class="cc_img" src="https://imgs.search.brave.com/OKh_m9EF-nqLFP7Vrm9VT90E8shhcLy8Bz4GxpSo82E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzAzLzY3LzkwLzQ2/LzM2MF9GXzM2Nzkw/NDY4Ml90b3RWeENj/QlNPWWxNSVJVZk1L/cGVraE1ocFplSjVp/Mi5qcGc" alt="concealed carry image">
         </div>
         <div class="third_grid">
